src/objects/E2CP__casepref__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>E2CP__prefcat__c</fullName>
        <description>Name of the grouping that this setting is associated with.</description>
        <label>Category</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E2CP__preflong__c</fullName>
        <description>A setting will assume the name specified in this field instead of the standard Name field when populated.</description>
        <label>Long Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E2CP__prefval__c</fullName>
        <description>Value for this setting.</description>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>casepref</label>
    <listViews>
        <fullName>E2CP__AllPrefs</fullName>
        <columns>E2CP__prefcat__c</columns>
        <columns>NAME</columns>
        <columns>E2CP__prefval__c</columns>
        <columns>E2CP__preflong__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Preferences</label>
    </listViews>
</CustomObject>